# vdrplayer2

./: .pylintrc  README.md  pyproject.toml  vdrplayer2
tests/: monitor-2000.csv  monitor.csv
vdrplayer2/: __init__.py  vdrplayer2.py
vdrplayer2/data/: monitor-signalk.csv
