[project]
name = "vdrplayer2"
version = "0.0.1"
authors = [
  { name="Alec Leamas", email="leamas@nowhere.net" },
]
license = "GPL-3.0-or-later"
license-files = ["COPYING"]

description = "OpenCPN logfile replay tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["websocket-client"]

[project.urls]
Homepage = "https://github.com/leamas/vdrplayer2"
Issues = "https://github.com/leamas/vdrplayer2/issues"

[project.scripts]
vdrplayer2 = "vdrplayer2.vdrplayer2:main"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vdrplayer2"]
